--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@
 
 /PRS-Lab1/.vs/PRS-Lab1/FileContentIndex/baf96da9-c394-4988-bc31-c5424efeb0fe.vsidx
 /PRS-Lab1/.vs/PRS-Lab1/FileContentIndex/f49de513-069b-423c-96df-e5b80f0ea166.vsidx
+/PRS-Lab1/.vs/PRS-Lab1/FileContentIndex/09f18cdd-ed2c-434e-a182-ed5dd3533dca.vsidx
