PRS-Lab2 solved

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,6 @@
 /PRS-Lab1/.vs/PRS-Lab1/FileContentIndex/baf96da9-c394-4988-bc31-c5424efeb0fe.vsidx
 /PRS-Lab1/.vs/PRS-Lab1/FileContentIndex/f49de513-069b-423c-96df-e5b80f0ea166.vsidx
 /PRS-Lab1/.vs/PRS-Lab1/FileContentIndex/09f18cdd-ed2c-434e-a182-ed5dd3533dca.vsidx
+/PRS-Lab2-Serialization/.vs/PRS-Lab2-Serialization/FileContentIndex/0d3ea32e-1c44-4326-a268-cd820fcffda8.vsidx
+/PRS-Lab2-Serialization/.vs/PRS-Lab2-Serialization/FileContentIndex/d98a6b68-f035-4ab6-94d5-8ac0e0f00f54.vsidx
+/PRS-Lab2-Serialization/.vs/PRS-Lab2-Serialization/FileContentIndex/e08e8ab8-df1c-4b64-8ce3-d85ae5a634b1.vsidx
