--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@
 /PRS-Lab2-Serialization/.vs/PRS-Lab2-Serialization/FileContentIndex/0d3ea32e-1c44-4326-a268-cd820fcffda8.vsidx
 /PRS-Lab2-Serialization/.vs/PRS-Lab2-Serialization/FileContentIndex/d98a6b68-f035-4ab6-94d5-8ac0e0f00f54.vsidx
 /PRS-Lab2-Serialization/.vs/PRS-Lab2-Serialization/FileContentIndex/e08e8ab8-df1c-4b64-8ce3-d85ae5a634b1.vsidx
+/PRS-Lab3-REST/PRS-Lab3/.vs/PRS-Lab3/FileContentIndex/01d241dd-b934-4f85-aa2a-6891a76b5058.vsidx
+/PRS-Lab3-REST/PRS-Lab3/.vs/PRS-Lab3/FileContentIndex/f9692d14-e8d2-46d8-8f7a-a9d7497d2e39.vsidx
