--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@
 /PRS-Lab3-REST/PRS-Lab3/.vs/PRS-Lab3/FileContentIndex/01d241dd-b934-4f85-aa2a-6891a76b5058.vsidx
 /PRS-Lab3-REST/PRS-Lab3/.vs/PRS-Lab3/FileContentIndex/f9692d14-e8d2-46d8-8f7a-a9d7497d2e39.vsidx
 /PRS-Lab3-REST/PRS-Lab3/PRS_Lab3/.vs/PRS_Lab3/FileContentIndex/a98e4cdb-135a-4a81-b1a2-8e8f3ce0e201.vsidx
+/PRS-Lab3-REST/PRS-Lab3/PRS_Lab3/.vs/PRS_Lab3/FileContentIndex/f782602f-ab8e-4fd7-bedb-290130aaeb72.vsidx
