Lab3 - final working

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,6 @@
 /PRS-Lab3-REST/PRS-Lab3/.vs/PRS-Lab3/FileContentIndex/f9692d14-e8d2-46d8-8f7a-a9d7497d2e39.vsidx
 /PRS-Lab3-REST/PRS-Lab3/PRS_Lab3/.vs/PRS_Lab3/FileContentIndex/a98e4cdb-135a-4a81-b1a2-8e8f3ce0e201.vsidx
 /PRS-Lab3-REST/PRS-Lab3/PRS_Lab3/.vs/PRS_Lab3/FileContentIndex/f782602f-ab8e-4fd7-bedb-290130aaeb72.vsidx
+/PRS-Lab3-REST/PRS-Lab3/PRS_Lab3/.vs/PRS_Lab3/FileContentIndex/03bdc89d-e06f-4bda-945b-227f04832a69.vsidx
+/PRS-Lab3-REST/PRS-Lab3/PRS_Lab3/.vs/PRS_Lab3/FileContentIndex/41d8753d-afd1-491d-a738-f9c385edba5a.vsidx
+/PRS-Lab3-REST/PRS-Lab3/PRS_Lab3/.vs/PRS_Lab3/FileContentIndex/422599dd-c0b5-4274-8fc2-5e6b97f2162a.vsidx
