Lab3 - final working

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@
 /PRS-Lab3-REST/PRS-Lab3/PRS_Lab3/.vs/PRS_Lab3/FileContentIndex/03bdc89d-e06f-4bda-945b-227f04832a69.vsidx
 /PRS-Lab3-REST/PRS-Lab3/PRS_Lab3/.vs/PRS_Lab3/FileContentIndex/41d8753d-afd1-491d-a738-f9c385edba5a.vsidx
 /PRS-Lab3-REST/PRS-Lab3/PRS_Lab3/.vs/PRS_Lab3/FileContentIndex/422599dd-c0b5-4274-8fc2-5e6b97f2162a.vsidx
+/PRS-Lab3-REST/PRS-Lab3/PRS_Lab3/.vs/PRS_Lab3/FileContentIndex/ceeaf22c-26cd-44a1-beaa-f3806a56f601.vsidx
