--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,8 @@
 /PRS-Lab3-REST/PRS-Lab3/PRS_Lab3/.vs/PRS_Lab3/FileContentIndex/422599dd-c0b5-4274-8fc2-5e6b97f2162a.vsidx
 /PRS-Lab3-REST/PRS-Lab3/PRS_Lab3/.vs/PRS_Lab3/FileContentIndex/ceeaf22c-26cd-44a1-beaa-f3806a56f601.vsidx
 /PRS-Lab1/.vs/PRS-Lab1-XML-JSON/FileContentIndex/c6012407-dc7b-4663-bcb8-9e821d0cda65.vsidx
+/PRS-Lab4 - SOAP/.vs/PRS-Lab4 - SOAP/FileContentIndex/11a55770-898a-4443-9bfc-453df0b643eb.vsidx
+/PRS-Lab4 - SOAP/.vs/PRS-Lab4 - SOAP/FileContentIndex/48ebc081-06ea-41d9-a5ed-ac453c4c4f02.vsidx
+/PRS-Lab4 - SOAP/.vs/PRS-Lab4 - SOAP/FileContentIndex/787462af-951b-4098-ac6f-f18d43a3a7f9.vsidx
+/PRS-Lab4 - SOAP/.vs/PRS-Lab4 - SOAP/FileContentIndex/7ef94576-bc27-49db-b5f6-b128d33753f1.vsidx
+/PRS-Lab4 - SOAP/.vs/PRS-Lab4 - SOAP/FileContentIndex/8857e4d3-9d20-452c-b34c-f5cebc03abb5.vsidx
