PRS Lab4 Final with UI

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,6 @@
 /PRS-Lab4 - SOAP/.vs/PRS-Lab4 - SOAP/FileContentIndex/787462af-951b-4098-ac6f-f18d43a3a7f9.vsidx
 /PRS-Lab4 - SOAP/.vs/PRS-Lab4 - SOAP/FileContentIndex/7ef94576-bc27-49db-b5f6-b128d33753f1.vsidx
 /PRS-Lab4 - SOAP/.vs/PRS-Lab4 - SOAP/FileContentIndex/8857e4d3-9d20-452c-b34c-f5cebc03abb5.vsidx
+/PRS-Lab4 - SOAP/.vs/PRS-Lab4 - SOAP/FileContentIndex/23e298a8-8b20-4b23-8e33-5e9a4b0220c8.vsidx
+/PRS-Lab4 - SOAP/.vs/PRS-Lab4 - SOAP/FileContentIndex/2e006ead-5d27-4c64-8e5b-91a54641ce56.vsidx
+/PRS-Lab4 - SOAP/.vs/PRS-Lab4 - SOAP/FileContentIndex/76d6ec40-4725-400f-b7fd-fd0c95ea1a24.vsidx
