--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,4 @@
 /PRS-Lab4 - SOAP/.vs/PRS-Lab4 - SOAP/FileContentIndex/23e298a8-8b20-4b23-8e33-5e9a4b0220c8.vsidx
 /PRS-Lab4 - SOAP/.vs/PRS-Lab4 - SOAP/FileContentIndex/2e006ead-5d27-4c64-8e5b-91a54641ce56.vsidx
 /PRS-Lab4 - SOAP/.vs/PRS-Lab4 - SOAP/FileContentIndex/76d6ec40-4725-400f-b7fd-fd0c95ea1a24.vsidx
+/PRS-Lab4 - SOAP/.vs/PRS-Lab4 - SOAP/FileContentIndex/5f684dd5-9165-44d0-a158-feaa976ce694.vsidx
